traefik2/app.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: stilton
  labels:
    app: cheese
    cheese: stilton
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cheese
      task: stilton
  template:
    metadata:
      labels:
        app: cheese
        task: stilton
        version: v0.0.1
    spec:
      containers:
        - name: cheese
          image: errm/cheese:stilton
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: stilton
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: cheese
    task: stilton
