traefik2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: taxisbahia.cl
      http:
        paths:
          - path: /
            backend:
              serviceName: taxisbahia
              servicePort: http
